--- a/src/components/supplier/screen/main.scss
+++ b/src/components/supplier/screen/main.scss
@@ -2,6 +2,19 @@
   background-color: #fff;
   .location {
     padding-left: 15px;
+    .van-button{
+      margin: 5px 10px 5px 0;
+      &.activated {
+        border: 1px solid #1f8ceb !important;
+        background: #f0f8ff;
+        color: #1f8ceb !important;
+        border-radius: 5px;
+        background-image: url("./images/checked.svg");
+        background-position: 100% 100%;
+        background-repeat: no-repeat;
+        background-size: 17px 17px;
+      }
+    }
   }
   .category{
     padding-left: 15px;
