--- a/src/components/supplier/screen/main.html
+++ b/src/components/supplier/screen/main.html
@@ -1,18 +1,22 @@
 <div class="screen-index">
-  <div class="location">
-    <h3>所在地</h3>
-    <van-button type="default" :class="{activated:actived}" @click="switchSearch">{{province}}</van-button>
-    <van-button type="default" :class="{activated:actived}" @click="switchSearch" v-if="this.city !== ''">{{city}}</van-button>
-  </div>
-  <div class="category">
-    <h3>服装</h3>
-    <div class="checkbox-box">
-      <van-button type="default"  v-for="item in 5">五金类</van-button>
+  <div class="attr-select-list">
+    <div class="location">
+      <h3>所在地</h3>
+      <van-button type="default" :class="{activated:actived}" @click="switchSearch">{{province}}</van-button>
+      <van-button type="default" :class="{activated:actived}" @click="switchSearch" v-if="this.city !== ''">{{city}}</van-button>
+    </div>
+    <div class="category">
+      <template v-for="item in categories">
+        <h3>{{item.Name}}</h3>
+        <div class="checkbox-box">
+          <van-button type="default" v-for="(list,index) in item.SubCategories" :key="index" :class="{activated:list.checked}" @click="toggleSelectItem(list)">{{list.Name}}</van-button>
+        </div>
+      </template>
     </div>
   </div>
   <div class="btn-box">
-    <div class="btn reset">重置</div>
-    <div class="btn confirm">确定</div>
+    <div class="btn reset" @click="resetSelect">重置</div>
+    <div class="btn confirm" @click="confirmSelect">确定</div>
   </div>
   <van-popup v-model="select" position="bottom" >
     <van-area :area-list="areaList" :columns-num="2" @cancel="switchSearch" @confirm="confirmArea"></van-area>
