--- a/src/components/supplier/list/item/main.html
+++ b/src/components/supplier/list/item/main.html
@@ -1,4 +1,4 @@
-<div class="list-item">
+<div class="list-item" @click="$emit('click')">
   <div class="list-left">
     <div v-if="item.logoUrl" class="img-box" :style="`background-image:url(${item.logoUrl})`"></div>
     <div v-else class="img-box" :style="`background-image:url(${defaultUrl})`"></div>
